stitch/src/snapshots/stitch__parser__tests__a_stray_semicolon_is_a_helpful_error.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1; 2\")"
---
Err(
    ParseError {
        message: "Stitch has no semicolons — remove the `;` (statements are separated by whitespace)",
        span: Span {
            start: 1,
            end: 2,
        },
        entry: Expr,
    },
)
