stitch/src/snapshots/stitch__parser__tests__addition_binds_tighter_than_comparison.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1 + 2 < 3\")"
---
Binary {
    op: Lt,
    left: Binary {
        op: Add,
        left: Int(
            1,
        ),
        right: Int(
            2,
        ),
    },
    right: Int(
        3,
    ),
}
