stitch/src/snapshots/stitch__parser__tests__addition_binds_tighter_than_range.snap
---
source: stitch/src/parser.rs
expression: "p(\"1 .. n + 1\")"
---
Range {
    start: Some(
        Int(
            1,
        ),
    ),
    end: Some(
        Binary {
            op: Add,
            left: Var(
                "n",
            ),
            right: Int(
                1,
            ),
        },
    ),
    inclusive: false,
}
