stitch/src/snapshots/stitch__parser__tests__an_error_inside_interpolation_names_its_context.snap
---
source: stitch/src/parser.rs
expression: "parse(r#\"\"value is {1 +}\"\"#)"
---
Err(
    ParseError {
        message: "in string interpolation: unexpected token: Eof",
        span: Span {
            start: 3,
            end: 3,
        },
        entry: Expr,
    },
)
