stitch/src/snapshots/stitch__parser__tests__an_interpolated_string_pattern_is_an_error.snap
---
source: stitch/src/parser.rs
expression: "parse(r#\"match s { \"{x}\" => 1  _ => 0 }\"#)"
---
Err(
    ParseError {
        message: "string interpolation isn't allowed in a pattern — match on a plain string literal",
        span: Span {
            start: 10,
            end: 15,
        },
    },
)
