stitch/src/snapshots/stitch__parser__tests__an_operator_with_no_operand_is_an_error.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1 +\")"
---
Err(
    ParseError {
        message: "unexpected token: Eof",
        span: Span {
            start: 3,
            end: 3,
        },
        entry: Expr,
    },
)
