stitch/src/snapshots/stitch__parser__tests__and_binds_tighter_than_or.snap
---
source: stitch/src/parser.rs
expression: "parse(\"a and b or c\")"
---
Binary {
    op: Or,
    left: Binary {
        op: And,
        left: Var(
            "a",
        ),
        right: Var(
            "b",
        ),
    },
    right: Var(
        "c",
    ),
}
