stitch/src/snapshots/stitch__parser__tests__arithmetic_binds_tighter_than_pipe.snap
---
source: stitch/src/parser.rs
expression: "parse(\"a + b |> f\")"
---
Binary {
    op: Pipe,
    left: Binary {
        op: Add,
        left: Var(
            "a",
        ),
        right: Var(
            "b",
        ),
    },
    right: Var(
        "f",
    ),
}
