stitch/src/snapshots/stitch__parser__tests__bare_dollar_is_the_first_param.snap
---
source: stitch/src/parser.rs
expression: "p(\"each($)\")"
---
Call {
    callee: Var(
        "each",
    ),
    args: [
        Lambda {
            params: [
                "$a",
            ],
            body: Var(
                "$a",
            ),
        },
    ],
}
