stitch/src/snapshots/stitch__parser__tests__block_as_lambda_body.snap
---
source: stitch/src/parser.rs
expression: "p(\"x -> { let y = x * 2  y + 1 }\")"
---
Lambda {
    params: [
        "x",
    ],
    body: Block {
        stmts: [
            Let {
                name: "y",
                mutable: false,
                value: Binary {
                    op: Mul,
                    left: Var(
                        "x",
                    ),
                    right: Int(
                        2,
                    ),
                },
            },
        ],
        result: Some(
            Binary {
                op: Add,
                left: Var(
                    "y",
                ),
                right: Int(
                    1,
                ),
            },
        ),
    },
}
