stitch/src/snapshots/stitch__parser__tests__chained_conditionals_point_to_match.snap
---
source: stitch/src/parser.rs
expression: "parse(\"a => 1 | b => 2 | 3\")"
---
Err(
    ParseError {
        message: "chained conditionals aren't allowed — use `match` for more than two cases",
        span: Span {
            start: 11,
            end: 13,
        },
        entry: Expr,
    },
)
